--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -659,7 +659,7 @@ window.makeComments = async function(character, key) {
 
   //Last line of the function. KEEP
 })
-</script><tw-passagedata pid="1" name="init" tags="" position="1075,225" size="200,200">&lt;&lt;nobr&gt;&gt;&lt;&lt;set _timerRunning = true&gt;&gt;&lt;&lt;timed 3s&gt;&gt;&lt;&lt;set _timerRunning = false&gt;&gt;
+</script><tw-passagedata pid="1" name="init" tags="" position="1050,450" size="200,200">&lt;&lt;nobr&gt;&gt;&lt;&lt;set _timerRunning = true&gt;&gt;&lt;&lt;timed 3s&gt;&gt;&lt;&lt;set _timerRunning = false&gt;&gt;
 &lt;&lt;set $avatar_checkpoint to avatar_checkpoint&gt;&gt;
 &lt;&lt;set $avatar_checkpoint_dist to avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set $avatar_heading to avatar_heading&gt;&gt;
@@ -708,7 +708,7 @@ Ok!
 &lt;&lt;/timed&gt;&gt;&lt;&lt;if _timerRunning&gt;&gt;
 Loading variables...
 &lt;&lt;/if&gt;&gt;&lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="2" name="live_variables" tags="" position="1300,225" size="200,200">
+</tw-passagedata><tw-passagedata pid="2" name="live_variables" tags="" position="1275,450" size="200,200">
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_checkpoint to avatar_checkpoint&gt;&gt;
 &lt;&lt;set $avatar_checkpoint_dist to avatar_checkpoint_dist&gt;&gt;
@@ -771,7 +771,7 @@ Loading variables...
 
 
 
-</tw-passagedata><tw-passagedata pid="3" name="main" tags="" position="1175,450" size="200,100">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="3" name="main" tags="" position="1150,675" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;silently&gt;&gt;
@@ -1092,7 +1092,7 @@ console.log(variables().hachi_comment);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1275,950" size="100,200"></tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1525,950" size="100,200"></tw-passagedata><tw-passagedata pid="16" name="hachi_bank" tags="" position="1225,1300" size="100,200"></tw-passagedata><tw-passagedata pid="17" name="hachi_stairs" tags="" position="1525,1250" size="100,200"></tw-passagedata><tw-passagedata pid="18" name="avatar_tobacco" tags="" position="2275,950" size="100,200"></tw-passagedata><tw-passagedata pid="19" name="avatar_bakery" tags="" position="2525,950" size="100,200"></tw-passagedata><tw-passagedata pid="20" name="avatar_bank" tags="" position="2575,1300" size="100,200"></tw-passagedata><tw-passagedata pid="21" name="avatar_church" tags="" position="2275,1250" size="100,200"></tw-passagedata><tw-passagedata pid="22" name="hachi_comment" tags="" position="1400,1150" size="100,100"></tw-passagedata><tw-passagedata pid="23" name="avatar_comment" tags="" position="2400,1150" size="100,100"></tw-passagedata><tw-passagedata pid="24" name="hachi_tram_2" tags="" position="1025,1075" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="hachi_tram_1" tags="" position="1025,950" size="100,100"></tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1075" size="100,100"></tw-passagedata><tw-passagedata pid="27" name="hachi_tram_3" tags="" position="1150,950" size="100,100"></tw-passagedata><tw-passagedata pid="28" name="hachi_stairs_1" tags="" position="1650,1250" size="100,100"></tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1650,1375" size="100,100"></tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1775,1250" size="100,100"></tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1775,1375" size="100,100"></tw-passagedata><tw-passagedata pid="32" name="hachi_bank_4" tags="" position="1100,1425" size="100,100"></tw-passagedata><tw-passagedata pid="33" name="hachi_bank_3" tags="" position="1100,1300" size="100,100"></tw-passagedata><tw-passagedata pid="34" name="hachi_bank_1" tags="" position="975,1300" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="hachi_bank_2" tags="" position="975,1425" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="hachi_fountain_2" tags="" position="1650,1075" size="100,100"></tw-passagedata><tw-passagedata pid="37" name="hachi_fountain_1" tags="" position="1650,950" size="100,100"></tw-passagedata><tw-passagedata pid="38" name="hachi_fountain_3" tags="" position="1775,950" size="100,100"></tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1075" size="100,100"></tw-passagedata><tw-passagedata pid="40" name="avatar_tobacco_4" tags="" position="2150,1075" size="100,100"></tw-passagedata><tw-passagedata pid="41" name="avatar_tobacco_2" tags="" position="2150,950" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="avatar_tobacco_1" tags="" position="2025,950" size="100,100"></tw-passagedata><tw-passagedata pid="43" name="avatar_tobacco_3" tags="" position="2025,1075" size="100,100"></tw-passagedata><tw-passagedata pid="44" name="avatar_bakery_3" tags="" position="2650,1075" size="100,100"></tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2650,950" size="100,100"></tw-passagedata><tw-passagedata pid="46" name="avatar_bakery_2" tags="" position="2775,950" size="100,100"></tw-passagedata><tw-passagedata pid="47" name="avatar_bakery_4" tags="" position="2775,1075" size="100,100"></tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2825,1300" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2825,1425" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2700,1425" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2700,1300" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2025,1250" size="100,100"></tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2025,1375" size="100,100"></tw-passagedata><tw-passagedata pid="54" name="avatar_church_3" tags="" position="2150,1250" size="100,100"></tw-passagedata><tw-passagedata pid="55" name="avatar_church_4" tags="" position="2150,1375" size="100,100"></tw-passagedata><tw-passagedata pid="56" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1275,900" size="100,200"></tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1525,900" size="100,200"></tw-passagedata><tw-passagedata pid="16" name="hachi_bank" tags="" position="1525,1225" size="100,200"></tw-passagedata><tw-passagedata pid="17" name="hachi_stairs" tags="" position="1275,1200" size="100,200"></tw-passagedata><tw-passagedata pid="18" name="avatar_tobacco" tags="" position="2275,900" size="100,200"></tw-passagedata><tw-passagedata pid="19" name="avatar_bakery" tags="" position="2525,900" size="100,200"></tw-passagedata><tw-passagedata pid="20" name="avatar_bank" tags="" position="2275,1225" size="100,200"></tw-passagedata><tw-passagedata pid="21" name="avatar_church" tags="" position="2525,1200" size="100,200"></tw-passagedata><tw-passagedata pid="22" name="hachi_act2" tags="" position="1400,1100" size="100,100"></tw-passagedata><tw-passagedata pid="23" name="avatar_act2" tags="" position="2400,1100" size="100,100"></tw-passagedata><tw-passagedata pid="24" name="hachi_tram_2" tags="" position="1025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="hachi_tram_1" tags="" position="1025,875" size="100,100"></tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="27" name="hachi_tram_3" tags="" position="1150,875" size="100,100"></tw-passagedata><tw-passagedata pid="28" name="hachi_stairs_1" tags="" position="1025,1200" size="100,100"></tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1025,1325" size="100,100"></tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1150,1200" size="100,100"></tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1150,1325" size="100,100"></tw-passagedata><tw-passagedata pid="32" name="hachi_bank_4" tags="" position="1775,1350" size="100,100"></tw-passagedata><tw-passagedata pid="33" name="hachi_bank_3" tags="" position="1775,1225" size="100,100"></tw-passagedata><tw-passagedata pid="34" name="hachi_bank_1" tags="" position="1650,1225" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="hachi_bank_2" tags="" position="1650,1350" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="hachi_fountain_2" tags="" position="1650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="37" name="hachi_fountain_1" tags="" position="1650,875" size="100,100"></tw-passagedata><tw-passagedata pid="38" name="hachi_fountain_3" tags="" position="1775,875" size="100,100"></tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="40" name="avatar_tobacco_4" tags="" position="2150,1000" size="100,100"></tw-passagedata><tw-passagedata pid="41" name="avatar_tobacco_2" tags="" position="2150,875" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="avatar_tobacco_1" tags="" position="2025,875" size="100,100"></tw-passagedata><tw-passagedata pid="43" name="avatar_tobacco_3" tags="" position="2025,1000" size="100,100"></tw-passagedata><tw-passagedata pid="44" name="avatar_bakery_3" tags="" position="2650,1000" size="100,100"></tw-passagedata><tw-passagedata pid="45" name="avatar_bakery_1" tags="" position="2650,875" size="100,100"></tw-passagedata><tw-passagedata pid="46" name="avatar_bakery_2" tags="" position="2775,875" size="100,100"></tw-passagedata><tw-passagedata pid="47" name="avatar_bakery_4" tags="" position="2775,1000" size="100,100"></tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2150,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2150,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2025,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2025,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2650,1200" size="100,100"></tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2650,1325" size="100,100"></tw-passagedata><tw-passagedata pid="54" name="avatar_church_3" tags="" position="2775,1200" size="100,100"></tw-passagedata><tw-passagedata pid="55" name="avatar_church_4" tags="" position="2775,1325" size="100,100"></tw-passagedata><tw-passagedata pid="56" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of a small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship.
 Each day, they meet at small park and explore their city. But today, fate intervenes as they wander through the streets and alleys, and Hachi finds himself separated from Buro. 
 Today, will be a different day.&quot;&gt;&gt;
@@ -1172,7 +1172,7 @@ $avatar_passage
   &lt;&lt;set $nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $nextAct is true and $avatar_narrative == &quot;avatar_pre_04Bfalse&quot; &gt;&gt;
+&lt;&lt;if $nextAct is true and $avatar_narrating== &quot;avatar_pre_04Bfalse&quot; &gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act1_1&quot;&gt;&gt;
         &lt;&lt;set $nextAct to false&gt;&gt;
@@ -1258,25 +1258,57 @@ $hachi_passage
   &lt;&lt;set $hachi_passage to &quot;hachi_act1_02/Hachi reaches the statue: What should Hachi do? Bark, to see who replies? Or, get a closer look at the tiny flower in th base of the statue? &quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_02Bfalse&quot;) and $hachi_tag == &quot;16&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02A/He discovers a tiny fairy nestled among the petals of the flower. &quot;Wow, a fairy!&quot; Hachi exclaims, his tail wagging with excitement.&quot;&gt;&gt;
+&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_02false&quot;) and $hachi_tag == &quot;16&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_03A/He discovers a tiny fairy nestled among the petals of the flower. &quot;Wow, a fairy!&quot; Hachi exclaims, his tail wagging with excitement.&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_02Afalse&quot;) and $hachi_movement == &quot;Bark&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_act1_02B/Hachi&#39;s barks echo through the square, but there&#39;s no response, prompting him to continue his search.&quot;&gt;&gt;
+&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_03Afalse&quot;) and $hachi_movement == &quot;Bark&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act1_03B/Hachi&#39;s barks echo through the square, but there&#39;s no response, prompting him to continue his search.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_act1_02Afalse&quot;&gt;&gt;
+&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_act1_03Afalse&quot;&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;hachi_act1_1&quot;&gt;&gt;
+  		&lt;&lt;include&quot;hachi_act2&quot;&gt;&gt;
         &lt;&lt;set $hachi_nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="62" name="hachi_act1_2" tags="" position="1700,750" size="100,100"></tw-passagedata><tw-passagedata pid="63" name="avatar_act1_1" tags="" position="2100,625" size="100,100">ACT 1_1</tw-passagedata><tw-passagedata pid="64" name="avatar_act1_2" tags="" position="2100,750" size="100,100"></tw-passagedata><tw-passagedata pid="65" name="both_end" tags="" position="1850,1500" size="200,100"></tw-passagedata><tw-passagedata pid="66" name="avatar_end" tags="" position="1725,1625" size="200,200"></tw-passagedata><tw-passagedata pid="67" name="hachi_end" tags="" position="1975,1625" size="200,200"></tw-passagedata><tw-passagedata pid="68" name="PassageFooter" tags="" position="1175,100" size="200,100">&lt;&lt;liveblock&gt;&gt;
+</tw-passagedata><tw-passagedata pid="62" name="avatar_act1_1" tags="" position="2100,625" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_act1_01/As Buro calls out to Hachi, he realizes that Hachi isn&#39;t responding. He worries, as he looks at the street, searching for any sign of his furry friend. &quot;&gt;&gt;
+
+&lt;&lt;liveblock&gt;&gt;
+$avatar_passage
+
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_01false&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_act1_02/Buro strains to get a better view of the surrounding area, hoping to catch sight of Hachi&#39;s distinctive caramel and white fur. However, his view is suddenly obstructed by people getting of a tram dropping off passengers.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_02false&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_act1_02A/What should Buro do? Should he manover around the crowd? Or should he wait for the tram to leave?&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_02Afalse&quot; and $avatar_movement == &quot;Jumping&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_act1_03A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &quot;Excuse me, pardon me,&quot; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
+  &lt;&lt;set $avatar_nextAct to true&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if ($avatar_narrating == &quot;avatar_act1_02false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_act1_03B/Buro decides to wait patiently, hoping for a clearer view. &quot;I&#39;ll wait here for Hachi,&quot; he murmurs, scanning the area. &quot;Once this crowd clears, I&#39;ll have a better chance of spotting him,&quot; he adds with determination.&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $avatar_nextAct is true and (avatar_narrating == &quot;avatar_act1_03Afalse&quot; or avatar_narrating == &quot;avatar_act1_03Bfalse&quot;&gt;&gt;
+    &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+  		&lt;&lt;include&quot;avatar_act2&quot;&gt;&gt;
+        &lt;&lt;set $avatar_nextAct to false&gt;&gt;
+  &lt;&lt;/replace&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;/liveblock&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="63" name="both_end" tags="" position="1850,1525" size="200,100"></tw-passagedata><tw-passagedata pid="64" name="avatar_end" tags="" position="1725,1650" size="200,200"></tw-passagedata><tw-passagedata pid="65" name="hachi_end" tags="" position="1975,1650" size="200,200"></tw-passagedata><tw-passagedata pid="66" name="PassageFooter" tags="" position="1150,325" size="200,100">&lt;&lt;liveblock&gt;&gt;
 
 &lt;&lt;if $prev_avatar_passage !== $avatar_passage&gt;&gt;
    &lt;&lt;set avatar_passage to $avatar_passage&gt;&gt;
