--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1174,7 +1174,7 @@ $avatar_passage
 
 &lt;&lt;if $nextAct is true and $avatar_narrating== &quot;avatar_pre_04Bfalse&quot; &gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;avatar_act1_1&quot;&gt;&gt;
+  		&lt;&lt;include&quot;avatar_act1&quot;&gt;&gt;
         &lt;&lt;set $nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
