--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -619,7 +619,7 @@ window.makeComments = async function(character, key) {
         characterData[character].randomSentences.observes = characterData[character].randomSentences.observes.sort(() => Math.random() - 0.5);
         characterData[character].randomSentences.soundscape = characterData[character].randomSentences.soundscape.sort(() => Math.random() - 0.5);
         // Calculate the total number of segments based on the initial checkpoint distance
-        characterData[character].totalSegments = Math.ceil(characterData[character].initialCheckpoint / 15);
+        characterData[character].totalSegments = Math.ceil(characterData[character].initialCheckpoint / 40);
         console.log(`Total segments for ${character}:`, characterData[character].totalSegments);
     }
 
@@ -1290,13 +1290,13 @@ $avatar_passage
   &lt;&lt;set $avatar_passage to &quot;avatar_act1_03/What should Buro do? Should he manover around the crowd? Or should he wait for the tram to leave?&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; or $avatar_narrating == &quot;avatar_act1_04Bfalse&quot;) and $avatar_movement == &quot;Jumping&quot;&gt;&gt;
+&lt;&lt;if ($avatar_narrating == &quot;avatar_act1_03false&quot; or $avatar_narrating == &quot;avatar_act1_04Bfalse&quot;) and $avatar_movement == &quot;Jumping&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_act1_04A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &quot;Excuse me, pardon me,&quot; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
   &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_act1_04B/Buro decides to wait patiently, hoping for a clearer view. &quot;I&#39;ll wait here for Hachi,&quot; he murmurs, scanning the area. &quot;Once this crowd clears, I&#39;ll have a better chance of spotting him,&quot; he adds with determination.&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_act1_04B/Buro decides to wait patiently, hoping for a clearer view. &#39;I&#39;ll wait here for Hachi,&#39; he murmurs, scanning the area. &#39;Once this crowd clears, I&#39;ll have a better chance of spotting him,&#39; he adds with determination.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and (avatar_narrating == &quot;avatar_act1_04Afalse&quot; or avatar_narrating == &quot;avatar_act1_04Bfalse&quot;)&gt;&gt;
