--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1346,19 +1346,18 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
 
-&lt;&lt;set  $prev_avatar_comment to $avatar_comment &gt;&gt;
+&lt;&lt;set  $prev_avatarMovementt to $avatar_movement &gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
  &lt;&lt;if $avatar_movement isnot &quot;Jumping&quot;&gt;&gt;
-	&lt;&lt;if $prev_avatar_comment !== $avatar_comment&gt;&gt;
+	&lt;&lt;if $prev_avatarMovementt !== $avatar_movement&gt;&gt;
      &lt;&lt;script&gt;&gt;
           makeShortComments(&#39;avatar&#39;,&#39;notmoving&#39;);
           console.log(variables().avatar_comment);
       &lt;&lt;/script&gt;&gt;
-      &lt;&lt;set $prev_avatar_comment to $avatar_comment&gt;&gt;
+      &lt;&lt;set $prev_avatarMovement to $avatar_movement&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
