--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -844,7 +844,7 @@ Loading variables...
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-		&lt;&lt;include &quot;test&quot;&gt;&gt;
+		&lt;&lt;include &quot;avatar_short_comments&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
        		 &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
@@ -1313,7 +1313,7 @@ $hachi_passage
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_03Afalse&quot;) and $hachi_movement == &quot;Bark&quot;&gt;&gt;
+&lt;&lt;if ($hachi_narrating == &quot;hachi_act1_02false&quot; or $hachi_narrating ==&quot;hachi_act1_03Afalse&quot;) and $hachi_movement == &quot;Barking&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_act1_03B/Hachi&#39;s barks echo through the square, but there&#39;s no response, prompting him to continue his search.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
