--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1383,12 +1383,14 @@ $avatar_passage
 
 &lt;&lt;liveblock&gt;&gt;
 &lt;&lt;if $prev_avatarMovement !== $avatar_movement&gt;&gt;
-  &lt;&lt;if $avatar_movement isnot &quot;Jumping&quot;&gt;&gt;
+  &lt;&lt;if $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
       &lt;&lt;script&gt;&gt;
         makeShortComments(&#39;avatar&#39;,&#39;notmoving&#39;);
         console.log(variables().avatar_comment);
       &lt;&lt;/script&gt;&gt;
       &lt;&lt;set $prev_avatarMovement to $avatar_movement&gt;&gt;
+      &lt;&lt;else&gt;&gt;
+      	&lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
     &lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
