--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1344,7 +1344,7 @@ $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot; or $avatar_narrating == &quot;avatar_act1_04Bfalse&quot;&gt;&gt;
   	&lt;&lt;set $key_movement to &quot;Jumping&quot;&gt;&gt;
-    &lt;&lt;include &quot;avatar_short_comment&quot;&gt;&gt;
+    &lt;&lt;include &quot;avatar_short_comments&quot;&gt;&gt;
   &lt;&lt;if $avatar_movement == &quot;Jumping&quot;&gt;&gt;
       &lt;&lt;set $avatar_passage to &quot;avatar_act1_04A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &#39;Excuse me, pardon me,&#39; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
       &lt;&lt;set $avatar_nextAct to true&gt;&gt;
@@ -1386,12 +1386,14 @@ $avatar_passage
     &lt;&lt;set $prev_hachi_passage to $hachi_passage&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments" tags="" position="300,1025" size="100,100">SHORT
+&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
 
 &lt;&lt;set $prev_avatarMovement to $avatar_movement&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
+SHORT 2
 &lt;&lt;if $prev_avatarMovement !== $avatar_movement&gt;&gt;
   &lt;&lt;if $avatar_movement !== $key_movement&gt;&gt;
       &lt;&lt;script&gt;&gt;
