--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -844,7 +844,7 @@ Loading variables...
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-		&lt;&lt;include &quot;comments&quot;&gt;&gt;
+		&lt;&lt;include &quot;avatar_short_comments2&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
        		 &lt;&lt;include &quot;&quot;&gt;&gt;
@@ -1396,7 +1396,7 @@ $avatar_comment
 			makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
 			console.log(variables().avatar_comment);
 		&lt;&lt;/script&gt;&gt;
-		&lt;&lt;set _prevAvatarMovement to $avatar_movement&gt;&gt;
+		&lt;&lt;set _prevAvatarMovement to variables().avatar_movement&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 	&lt;&lt;if $avatar_comment !== _prevAvatarComment&gt;&gt;
 		&lt;&lt;set _prevAvatarComment to $avatar_comment&gt;&gt;
