--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -844,7 +844,7 @@ Loading variables...
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-		&lt;&lt;include &quot;avatar_short_comments2&quot;&gt;&gt;
+		&lt;&lt;include &quot;avatar_act1_1&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
        		 &lt;&lt;include &quot;&quot;&gt;&gt;
@@ -1386,7 +1386,7 @@ $avatar_passage
     &lt;&lt;set $prev_hachi_passage to $hachi_passage&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments2" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set _prevAvatarMovement to $avatar_movement&gt;&gt;
 &lt;&lt;set _prevAvatarComment to &quot;&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
