--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1347,6 +1347,9 @@ $avatar_passage
       &lt;&lt;set $avatar_passage to &quot;avatar_act1_04A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &#39;Excuse me, pardon me,&#39; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
       &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
+ &lt;&lt;if $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
+	 &lt;&lt;include &quot;avatar_short_comments&gt;&gt;
+ &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
