--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1348,7 +1348,7 @@ $avatar_passage
       &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
  &lt;&lt;if $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
-	 &lt;&lt;include &quot;avatar_short_comments&gt;&gt;
+	 &lt;&lt;include &quot;avatar_short_comments&quot;&gt;&gt;
  &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
