--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1347,15 +1347,17 @@ $avatar_passage
       &lt;&lt;set $avatar_passage to &quot;avatar_act1_04A/Buro tries to skip his way through the crowd, but the crowd makes it difficult. &#39;Excuse me, pardon me,&#39; he says politely, attempting to get a clearer view.&quot;&gt;&gt;
       &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
- &lt;&lt;if $avatar_movement !== &quot;Jumping&quot;&gt;&gt;
-	 &lt;&lt;include &quot;avatar_short_comments&quot;&gt;&gt;
- &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
 	&lt;&lt;if $avatar_movement == &quot;Looking&quot;&gt;&gt;
   		&lt;&lt;set $avatar_passage to &quot;avatar_act1_04B/Buro decides to wait patiently, hoping for a clearer view. &#39;I&#39;ll wait here for Hachi,&#39; he murmurs, scanning the area. &#39;Once this crowd clears, I&#39;ll have a better chance of spotting him,&#39; he adds with determination.&quot;&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $avatar_narrating == &quot;avatar_act1_03false&quot;&gt;&gt;
+&lt;&lt;if $avatar_movement !== &quot;Jumping&quot; || $avatar_movement !== &quot;Looking&quot;&gt;&gt;
+&lt;&lt;include &quot;comments&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and (avatar_narrating == &quot;avatar_act1_04Afalse&quot; or avatar_narrating == &quot;avatar_act1_04Bfalse&quot;)&gt;&gt;
@@ -1386,8 +1388,6 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set _prevAvatarMovement to $avatar_movement&gt;&gt;
-&lt;&lt;set _prevAvatarComment to &quot;&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
 $avatar_comment
 	&lt;&lt;if _prevAvatarMovement !== $avatar_movement &amp;&amp; $avatar_movement !== $key_movement&gt;&gt;
@@ -1444,21 +1444,19 @@ $avatar_comment
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="69" name="comments" tags="" position="300,1150" size="100,100">&lt;&lt;script&gt;&gt;
-var previousAvatarMovement = null; // Variable to store the previous value of avatar_movement
-var currentAvatarMovement = variables().avatar_movement;
+if (window._prevAvatarMovement !== window.$avatar_movement &amp;&amp; window.$avatar_movement !== window.$key_movement) {
+    makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
+    console.log(variables().avatar_comment);
+    window._prevAvatarMovement = variables().avatar_movement;
+}
 
-    if (currentAvatarMovement !== previousAvatarMovement) {
-        // Update the previous value
-        previousAvatarMovement = currentAvatarMovement;
-        
-        // Execute the code block
-        makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
-        console.log(variables().avatar_comment);
-        variables().avatar_passage = variables().avatar_comment;
-        var passage_temp = variables().avatar_passage;
-        console.log(passage_temp); // Ensure passage_temp is correct
-        writeToAvatar(&#39;avatar_passage&#39;, passage_temp);
-    }
+if (window.$avatar_comment !== window._prevAvatarComment) {
+    window._prevAvatarComment = window.$avatar_comment;
+    window.$avatar_passage = window.$avatar_comment;
+    var passage_temp = variables().avatar_passage;
+    console.log(passage_temp); // Ensure passage_temp is correct
+    writeToAvatar(&#39;avatar_passage&#39;, passage_temp);
+}
 &lt;&lt;/script&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
