--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -844,7 +844,7 @@ Loading variables...
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-		&lt;&lt;include &quot;avatar_act1_1&quot;&gt;&gt;
+		&lt;&lt;include &quot;comments&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
        		 &lt;&lt;include &quot;&quot;&gt;&gt;
